# xa

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/skills/xa-dev/: SKILL.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/xa/: archive.html  claude_cli.html  claude_fs.html  cli.html  config.html  hosts.html  service.html  sessions.html  store.html  tmux.html
_modules/xa/hosts/: http.html  local.html  ssh.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: xa.rst.txt
_sources/module_docs/xa/: __main__.rst.txt  archive.rst.txt  claude_cli.rst.txt  claude_fs.rst.txt  cli.rst.txt  config.rst.txt  hosts.rst.txt  service.rst.txt  sessions.rst.txt  store.rst.txt  tmux.rst.txt
_sources/module_docs/xa/hosts/: http.rst.txt  local.rst.txt  ssh.rst.txt
misc/docs/: design.md  research.md  roadmap.md
misc/docs/migrations/: edualc.md
module_docs/: xa.html
module_docs/xa/: __main__.html  archive.html  claude_cli.html  claude_fs.html  cli.html  config.html  hosts.html  service.html  sessions.html  store.html  tmux.html
module_docs/xa/hosts/: http.html  local.html  ssh.html
tests/: test_archive.py  test_claude_cli.py  test_claude_fs.py  test_cli.py  test_config.py  test_hosts_http.py  test_hosts_local.py  test_hosts_ssh.py  test_pick.py  test_service.py  test_sessions.py  test_store.py  test_tmux.py
xa/: __init__.py  __main__.py  archive.py  claude_cli.py  claude_fs.py  cli.py  config.py  service.py  sessions.py  store.py  tmux.py
xa/data/skills/xa-install/: SKILL.md
xa/hosts/: __init__.py  http.py  local.py  ssh.py
xa/webui/: index.html
